<resources>
    <string name="app_name">CryptoCurrency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>
    <string name="status">Status</string>
    <string name="description">description</string>
    <string name="tags">Tags</string>
    <string name="team_members">Team Members</string>
    <string name="member_name">Member Name</string>
    <string name="designation">Designation</string>
    <string name="error_description">Error Description</string>
    <string name="error_title">Error Title</string>
</resources>